--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Roblox Extension",
-    "description": "Extension for https://www.roblox.com",
+    "name": "Roblox Friend Removal",
+    "description": "Use For unfriend in mass",
     "version": "1.0.0",
     "manifest_version": 3,
 
